# slack-data-bot

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md  deployment.md
examples/: config.yaml.example  poll-prompt.md  quickstart.md  slack-app-manifest.yaml
scripts/: install-daemon.sh  run-cycle.sh  run.sh
src/slack_data_bot/: __init__.py  bot.py  config.py
src/slack_data_bot/cache/: __init__.py  state.py
src/slack_data_bot/delivery/: __init__.py  approval.py  notifier.py
src/slack_data_bot/engine/: __init__.py  claude_code.py  investigator.py  quality.py
src/slack_data_bot/learning/: __init__.py  feedback.py  optimizer.py  tracker.py
src/slack_data_bot/monitor/: __init__.py  dedup.py  filter.py  priority.py  search.py  slack_monitor.py
tests/: conftest.py  test_bot.py  test_delivery.py  test_engine.py  test_integration.py  test_learning.py  test_monitor.py
